k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8sapp-service
spec:
  selector:
    app: k8sapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
